# noisyclips

./: Cargo.toml  LICENSE  README.md  build.rs
clipnotify/: Makefile  clipnotify.c  clipnotify.h
src/: main.rs
